# strawberry_cpu_demo

./: README.md  setup.cfg
src/demo_strawberry_issue/: client.py  server.py
