[metadata]
name = demo_strawberry_server
description = Small demo to show cases where the finally statement is not called
url = https://github.com/rjwills28/demo_strawberry_issue
author = Rebecca Williams
author_email = rjw@observatorysciences.co.uk
license = 
long_description = file: 
long_description_content_type = 
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
packages = demo_strawberry_issue
package_dir =
    =src

# Specify any package dependencies below.
install_requires =
    strawberry-graphql
    aioca
    aiohttp
    psutil
    websockets


[options.packages.find]
where = src

# Specify any package data to be included in the wheel below.
[options.package_data]

[options.entry_points]
# Include a command line script
console_scripts =
    demo_strawberry_server =demo_strawberry_issue.server:main
    demo_strawberry_client =demo_strawberry_issue.client:main
